re PR debug/49047 (DW_AT_linkage_name missing for constructors and destructors)

Fix PR debug/49047

gcc/

	* dwarf2out.c (gen_subprogram_die): Emit linkage name attribute
	for concrete functions containing the code of cloned functions.

gcc/testsuite/

	* g++.dg/debug/dwarf2/cdtor-1.C: New test.

From-SVN: r174472